--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
     "qs": "^6.11.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.43.3",
+    "react-hook-form": "^7.43.5",
     "react-query": "^3.39.3",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@types/qs": "^6.9.7",
