--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-hook-form": "^7.43.5",
     "react-query": "^3.39.3",
     "react-toastify": "^9.1.1",
+    "swiper": "^9.1.1",
     "typescript": "4.9.5",
     "yup": "^1.0.2"
   },
