--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,8 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": "next/core-web-vitals",
+  "jsx-a11y/anchor-is-valid": [ "error", {
+    "components": [ "Link" ],
+    "specialLink": [ "hrefLeft", "hrefRight" ],
+    "aspects": [ "invalidHref", "preferButton" ]
+}]
 }
