--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-BASE_URL=https://api.alphaquest.io
+NEXT_PUBLIC_BASE_URL=https://api.alphaquest.io
+NEXT_PUBLIC_PADDLE_SANDBOX=sandbox
+NEXT_PUBLIC_PADDLE_VENDOR_ID=11441
