--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.3.4",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "mixpanel-browser": "^2.46.0",
     "moment": "^2.29.4",
     "next": "13.1.6",
     "qs": "^6.11.0",
@@ -32,6 +33,7 @@
     "yup": "^1.0.2"
   },
   "devDependencies": {
+    "@types/mixpanel-browser": "^2.38.1",
     "@types/qs": "^6.9.7",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
