--- a/package.json
+++ b/package.json
@@ -16,17 +16,23 @@
     "@types/node": "18.14.1",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/react-table": "^7.7.14",
     "axios": "^1.3.4",
+    "chart.js": "^4.3.0",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "faker": "^6.6.6",
     "mixpanel-browser": "^2.46.0",
     "moment": "^2.29.4",
     "next": "13.1.6",
     "qs": "^6.11.0",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.5",
+    "react-paginate": "^8.2.0",
     "react-query": "^3.39.3",
+    "react-table": "^7.8.0",
     "react-toastify": "^9.1.1",
     "swiper": "^9.1.1",
     "typescript": "4.9.5",
