--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
     "yup": "^1.0.2"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.0.1",
     "@types/mixpanel-browser": "^2.38.1",
     "@types/qs": "^6.9.7",
     "autoprefixer": "^10.4.13",
+    "babel-plugin-inline-react-svg": "^2.0.2",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
   }
