--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-query": "^3.39.3",
     "react-table": "^7.8.0",
     "react-toastify": "^9.1.1",
+    "recharts": "^2.6.2",
     "swiper": "^9.1.1",
     "typescript": "4.9.5",
     "yup": "^1.0.2"
