--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/tailwindcss": "^0.1.2",
     "@heroicons/react": "^2.0.16",
     "@next/font": "13.1.6",
+    "@tippyjs/react": "^4.2.6",
     "@types/node": "18.14.1",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -32,6 +33,7 @@
     "react-hook-form": "^7.43.5",
     "react-paginate": "^8.2.0",
     "react-query": "^3.39.3",
+    "react-share": "^4.4.1",
     "react-table": "^7.8.0",
     "react-toastify": "^9.1.1",
     "recharts": "^2.6.2",
