--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-table": "^7.7.14",
     "axios": "^1.3.4",
     "chart.js": "^4.3.0",
+    "classnames": "^2.3.2",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "faker": "^6.6.6",
@@ -36,7 +37,8 @@
     "react-share": "^4.4.1",
     "react-table": "^7.8.0",
     "react-toastify": "^9.1.1",
-    "recharts": "^2.6.2",
+    "react-tooltip": "^5.20.0",
+    "recharts": "^2.7.2",
     "swiper": "^9.1.1",
     "typescript": "4.9.5",
     "yup": "^1.0.2"
