--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.5",
+    "react-linkify": "^1.0.0-alpha",
     "react-paginate": "^8.2.0",
     "react-query": "^3.39.3",
     "react-share": "^4.4.1",
@@ -47,6 +48,7 @@
     "@svgr/webpack": "^8.0.1",
     "@types/mixpanel-browser": "^2.38.1",
     "@types/qs": "^6.9.7",
+    "@types/react-linkify": "^1.0.2",
     "autoprefixer": "^10.4.13",
     "babel-plugin-inline-react-svg": "^2.0.2",
     "postcss": "^8.4.21",
