--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@types/react-table": "^7.7.14",
+    "@types/uuid": "^9.0.7",
     "axios": "^1.3.4",
     "chart.js": "^4.3.0",
     "classnames": "^2.3.2",
@@ -39,9 +40,11 @@
     "react-table": "^7.8.0",
     "react-toastify": "^9.1.1",
     "react-tooltip": "^5.20.0",
+    "reactjs-popup": "^2.0.6",
     "recharts": "^2.7.2",
     "swiper": "^9.1.1",
     "typescript": "4.9.5",
+    "uuid": "^9.0.1",
     "yup": "^1.0.2"
   },
   "devDependencies": {
