--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "react-toastify": "^9.1.1",
     "react-tooltip": "^5.20.0",
     "reactjs-popup": "^2.0.6",
-    "recharts": "^2.7.2",
+    "recharts": "2.7.2",
     "swiper": "^9.1.1",
     "typescript": "4.9.5",
     "uuid": "^9.0.1",
