init integrate app router

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@headlessui/tailwindcss": "^0.1.2",
     "@heroicons/react": "^2.0.16",
     "@iofate/react-coinbase-commerce": "^1.0.0",
-    "@next/font": "13.1.6",
+    "@next/font": "13.5.6",
     "@tippyjs/react": "^4.2.6",
     "@types/node": "18.14.1",
     "@types/react": "18.0.28",
@@ -24,18 +24,20 @@
     "chart.js": "^4.3.0",
     "classnames": "^2.3.2",
     "eslint": "8.34.0",
-    "eslint-config-next": "13.1.6",
+    "eslint-config-next": "13.5.6",
     "faker": "^6.6.6",
     "iconsax-react": "^0.0.8",
     "mixpanel-browser": "^2.46.0",
     "moment": "^2.29.4",
-    "next": "13.1.6",
+    "next": "13.5.6",
     "qs": "^6.11.0",
+    "rc-pagination": "^4.0.4",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.5",
     "react-linkify": "^1.0.0-alpha",
+    "react-multi-carousel": "^2.8.4",
     "react-paginate": "^8.2.0",
     "react-query": "^3.39.3",
     "react-share": "^4.4.1",
