--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-table": "7.8.0",
     "react-toastify": "9.1.1",
     "react-tooltip": "5.20.0",
+    "react-twitter-widgets": "^1.11.0",
     "reactjs-popup": "2.0.6",
     "recharts": "2.7.2",
     "swiper": "9.1.1",
